# draw-molecule-structure

./: Dockerfile  KETCHER_README.md  README.md  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: cd.yaml  ci.yaml
__tests__/: InlineCitation.test.tsx  KetcherEditor.test.tsx  MoleculeEditor.test.tsx  useKetcherAPI.test.ts
app/: layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/notebooks/: route.ts
app/api/pdf-proxy/: route.ts
app/api/sessions/: route.ts
app/components/: KetcherEditor.tsx  MoleculeEditor.tsx  useKetcherAPI.ts
app/components/chat/: ChatContainer.tsx  ChatHistorySidebar.tsx  ChatMessage.tsx  InlineCitation.tsx  KetcherModal.tsx  ModeSwitcher.tsx  SearchBar.tsx  SourcesSidebar.tsx  index.ts
app/components/document-visualization/: DocumentBrowser.tsx  DocumentFilters.tsx  NotebookCard.tsx  NotebookResults.tsx  PDFViewerModal.tsx  RecentDocuments.tsx  SearchFilter.tsx
app/hooks/: useChat.ts  useChatHistory.ts
app/lib/: constants.ts  utils.ts  vertex-ai.ts
app/types/: chat.ts
scripts/: gcs_metadata.py
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/: server.py
server/src/database/: __init__.py  connection.py
server/src/models/: __init__.py  base.py  molecule.py  notebook.py  part.py  reaction.py  reaction_role.py  synthesis.py
server/src/repositories/: __init__.py  base.py  molecule.py  notebook.py
server/src/routes/: chat.py  notebooks.py
server/src/schema/: chat.py
server/src/services/: vertex_ai.py
types/: ketcher.d.ts
(+4 files in other folders)
