[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend for molecule search application with Vertex AI integration"
authors = [
    {name = "dipanshu-cusp",email = "196902833+dipanshu-cusp@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "google-auth (>=2.34.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
